--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,32 @@
-/*
- * Przemyslaw Malirz
- *
- * dlock.
- */
 plugins {
     id 'java-library'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
-    id 'maven'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20'
     id 'jacoco'
-    id 'net.researchgate.release' version '2.6.0' apply false
+    id 'jacoco-report-aggregation'
     id 'maven-publish'
-    id "com.jfrog.bintray" version "1.8.5" apply false
 }
 
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
+}
+
+dependencies {
+    jacocoAggregation project(':dlock-core')
+    jacocoAggregation project(':dlock-jdbc')
+    jacocoAggregation project(':dlock-spring')
+}
+
+reporting {
+    reports {
+        testCodeCoverageReport(JacocoCoverageReport) {
+            testType = TestSuiteType.UNIT_TEST
+        }
+    }
+}
+
+tasks.named('check') {
+    dependsOn tasks.named('testCodeCoverageReport', JacocoReport)
 }
 
 subprojects {
@@ -25,46 +35,32 @@ subprojects {
     apply plugin: "groovy"
     apply plugin: "jacoco"
     apply plugin: 'maven-publish'
-    apply plugin: 'net.researchgate.release'
-    apply plugin: 'com.jfrog.bintray'
-    apply from: '../build-bintray.gradle'
 
     project.group = 'com.dlock'
 
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-        testImplementation "org.codehaus.groovy:groovy-all:2.5.8"
-        testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
+        testImplementation "org.apache.groovy:groovy-all:4.0.17"
+        testImplementation "org.spockframework:spock-core:2.4-M1-groovy-4.0"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.1"
+        testImplementation "net.bytebuddy:byte-buddy:1.14.11"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.1"
     }
 
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
-    }
-
-    compileKotlin {
-        kotlinOptions {
-            jvmTarget = "1.8"
-        }
-    }
-    compileTestKotlin {
-        kotlinOptions {
-            jvmTarget = "1.8"
-        }
     }
 
     jacoco {
-        toolVersion = "0.8.5"
-        reportsDir = file("$buildDir/jacoco")
+        toolVersion = "0.8.11"
     }
 
     jacocoTestReport {
         reports {
-            xml.enabled false
-            csv.enabled false
-            html.destination file("$buildDir/jacoco-report")
+            xml.required = true
+            html.outputLocation = layout.buildDirectory.dir("jacoco-html")
         }
     }
 
@@ -113,26 +109,4 @@ subprojects {
         }
     }
 
-    afterReleaseBuild.dependsOn bintrayUpload
-
 }
-
-task codeCoverageReport(type: JacocoReport) {
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
-    reports {
-        xml.enabled true
-        xml.destination file("$buildDir/reports/jacoco/report.xml")
-        html.enabled true
-        csv.enabled false
-    }
-}
-
-codeCoverageReport.dependsOn {
-    subprojects*.test
-}
-
