--- a/dlock-jdbc/src/main/resources/db/ORACLE-sql.properties
+++ b/dlock-jdbc/src/main/resources/db/ORACLE-sql.properties
@@ -1,4 +1,4 @@
-lock.findByKey=SELECT LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC FROM @@tableName@@ WHERE LCK_KEY = ?
-lock.findByHandle=SELECT  LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC FROM @@tableName@@ WHERE LCK_HNDL_ID = ?
-lock.insert=INSERT INTO @@tableName@@ (LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC) SELECT ?, ?, ?, ? FROM DUAL WHERE NOT EXISTS (SELECT 1 FROM @@tableName@@ WHERE LCK_KEY = ?)
+lock.findByKey=SELECT LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC, CURRENT_TIMESTAMP FROM @@tableName@@ WHERE LCK_KEY = ?
+lock.findByHandle=SELECT LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC, CURRENT_TIMESTAMP FROM @@tableName@@ WHERE LCK_HNDL_ID = ?
+lock.insert=INSERT INTO @@tableName@@ (LCK_KEY, LCK_HNDL_ID, CREATED_TIME, EXPIRE_SEC) SELECT ?, ?, CURRENT_TIMESTAMP, ? FROM DUAL WHERE NOT EXISTS (SELECT 1 FROM @@tableName@@ WHERE LCK_KEY = ?)
 lock.removeByHandle=DELETE FROM @@tableName@@ WHERE LCK_HNDL_ID = ?
